src/test/deca/context/invalid/created/rule3.71/inhexistmeth.deca
// Résultat erreur:
//    Appel d'une méthode inexistante (règle 3.71)
//
// Description:
//    Tests de programme incorrect contextuellement (appel d'une méthode inexistante)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    // Pas de méthode définie ici
}

class Test {
    int testMethod() {
        MaClasse obj = new MaClasse();
        return obj.methodeInexistante();
    }
}
